<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">药易通</string>

    <string name="digits_account">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_</string>
    <string name="digits_ip">abcdefghijklmnopqrstuvwxyz0123456789.</string>
    <string name="digits_order_number">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>

    <string name="text_splash">启动页</string>
    <string name="text_login">登录</string>
    <string name="text_logout">登出</string>
    <string name="text_register">注册</string>
    <string name="text_device_register">设备注册</string>
    <string name="text_system_configure">系统配置</string>
    <string name="text_create_system_configure">新增系统配置</string>
    <string name="text_account">账号</string>
    <string name="text_password">密码</string>
    <string name="text_add">新增</string>
    <string name="text_save">保存</string>
    <string name="text_temporary_storage">暂存</string>
    <string name="text_service_name">服务器名称</string>
    <string name="text_service_address">服务器地址</string>
    <string name="text_database">数据库</string>
    <string name="text_port">端口号</string>
    <string name="text_connect_test">连接测试</string>
    <string name="text_warehouse">仓库</string>
    <string name="text_mining_sales">采销</string>
    <string name="text_statistics">统计</string>
    <string name="text_me">我</string>
    <string name="text_intelligence_warehouse">智能仓库</string>
    <string name="text_all_warehouse">所有仓库</string>
    <string name="text_switch_warehouse">仓库切换</string>
    <string name="text_search">搜索</string>
    <string name="text_receiving_list">验收单</string>
    <string name="text_putaway_list">上架单</string>
    <string name="text_allot_list">调拨单</string>
    <string name="text_review_list">复核单</string>
    <string name="text_receiving_acceptance">收货验收</string>
    <string name="text_lot_add">批号新增</string>
    <string name="text_shelve_and_storage">上架入库</string>
    <string name="text_ex_warehouse_review">外复核</string>
    <string name="text_document_query">单据查询</string>
    <string name="text_sku_check">单品盘点</string>
    <string name="text_sku_detail">商品明细</string>
    <string name="text_sku_add">单品新增</string>
    <string name="text_shop_first">门店初盘</string>
    <string name="text_warehouse_first">仓库初盘</string>
    <string name="text_second_count">复盘</string>
    <string name="text_account_set">账套</string>
    <string name="text_other_option">其他操作</string>
    <string name="text_scan_sale_order_number">扫描销售单号</string>
    <string name="text_filter_sale_order_number">输入单号过滤</string>
    <string name="text_sale_order_number">销售单号</string>
    <string name="text_document_number">单据编号</string>
    <string name="text_document_date">单据日期</string>
    <string name="text_search_warehouse">搜索仓库</string>
    <string name="text_lot_number">批号</string>
    <string name="text_contact_unit">来往单位</string>
    <string name="text_choose_order">订单选择</string>
    <string name="text_order_filter">订单过滤</string>
    <string name="text_status">状态</string>
    <string name="text_salesman">采销员</string>
    <string name="text_bill_number">单据编号</string>
    <string name="text_quick_receiving_acceptance_qr">快速扫码验收</string>
    <string name="text_goods_name">商品名</string>
    <string name="text_specification">规格</string>
    <string name="text_validity">效期至</string>
    <string name="text_retail_price">价格</string>
    <string name="text_amount">数量</string>
    <string name="text_serial_number">序号</string>
    <string name="text_manufacturer">厂家</string>
    <string name="text_order_detail">订单明细</string>
    <string name="text_production_date">生产日期</string>
    <string name="text_production_place">产地</string>
    <string name="text_export_goods_allocation">调出货位</string>
    <string name="text_import_goods_allocation">调入货位</string>
    <string name="text_shelve_odd_numbers">上架单号</string>
    <string name="text_goods_allocation">货位</string>
    <string name="text_goods">商品</string>
    <string name="text_quick_shelve">快速上架</string>
    <string name="text_shelve_edit">上架单编辑</string>
    <string name="text_priority">优先级</string>
    <string name="text_document_remark">单据备注</string>
    <string name="text_document_status">单据状态</string>
    <string name="text_article_no">货号</string>
    <string name="text_unit">单位</string>
    <string name="text_code">编码</string>
    <string name="text_staging_area">暂存区</string>
    <string name="text_distribution_road">配送线路</string>
    <string name="text_customer">客户</string>
    <string name="text_replenishment_order">补货订单</string>
    <string name="text_intact_goods_number">整货数量</string>
    <string name="text_lcl_count">拼箱件数</string>
    <string name="text_package_count">打包件数</string>
    <string name="text_reviewer">复核人</string>
    <string name="text_recipient">接收人</string>
    <string name="text_diff_remark">差异备注</string>
    <string name="text_intact_goods_check">整货盘点</string>
    <string name="text_count_data">为你统计到数据</string>
    <string name="text_number">编号</string>
    <string name="text_barcode">条码</string>
    <string name="text_cost_price">成本单价</string>
    <string name="text_cost_total">成本金额</string>
    <string name="text_repository">库区</string>
    <string name="text_area">区域</string>
    <string name="text_progress">进度</string>
    <string name="text_prompt">提示</string>
    <string name="text_ok">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_select_account_set">账套选择</string>
    <string name="text_select_unit">单位选择</string>
    <string name="text_select_order">订单选择</string>
    <string name="text_scan">扫描</string>
    <string name="text_select_order_no">单号选择</string>
    <string name="text_select_allocation">货位选择</string>
    <string name="text_select_goods">商品选择</string>
    <string name="text_perform_option">操作执行</string>
    <string name="text_select_diff">差异选择</string>
    <string name="text_no_diff">无差异</string>
    <string name="text_make_area">产地</string>
    <string name="text_select">选择</string>
    <string name="text_inventory_amount">盘点数量</string>
    <string name="text_paper_amount">账面数量</string>
    <string name="text_inventory_edit">盘点编辑</string>
    <string name="text_inventory_add">盘点新增</string>
    <string name="text_allocation_scan">货位扫描</string>
    <string name="text_goods_scan">商品扫描</string>
    <string name="text_document_scan">单据扫描</string>
    <string name="text_filter">过滤</string>
    <string name="text_export">调出</string>
    <string name="text_import">调入</string>
    <string name="text_delivery_quantity">配送数量</string>
    <string name="text_receiving_quantity">收货数量</string>
    <string name="text_recipient_choose">接收人选择</string>


    <string name="title_service_name">服务器名称:</string>
    <string name="title_service_address">服务器地址:</string>
    <string name="title_database">数据库:</string>
    <string name="title_port">端口号:</string>
    <string name="title_account_set">账套:</string>
    <string name="title_client_name">往来单位:</string>

    <string name="prompt_login_wms">登陆WMS仓库管理系统</string>
    <string name="prompt_load_message">加载中……</string>
    <string name="prompt_server_config_first">请先进行服务器配置。</string>
    <string name="prompt_connect_test_first">请先进行连接测试。</string>
    <string name="prompt_delete_confirm">确定要删除吗?</string>
    <string name="prompt_select_account_set_first">请先选择账套!</string>
    <string name="prompt_input_account">请输入账号!</string>
    <string name="prompt_input_password">请输入密码!</string>
    <string name="prompt_select_unit">请选择单位!</string>
    <string name="prompt_complete_all">确定要完成全部吗?</string>
    <string name="prompt_force_complete">确定要强制完成吗?</string>
    <string name="prompt_complete_current">点击确定完成当前.</string>
    <string name="prompt_allot_add_finish_bill">该单据可能包含未添加调入货位的商品,确定要全部完成吗?</string>

    <string name="hint_barcode_collect">请采集条码</string>

    <string name="text_review_complete">复核完成</string>
    <string name="text_price">价格</string>
    <string name="text_allot_list_update">调拨单修改</string>
    <string name="text_allot_list_filter">调拨单过滤</string>
    <string name="text_recipient_filter">输入序号、拼音、名字过滤</string>
    <string name="text_history_allocation">历史货位</string>
    <string name="text_zh_format">整货(%1$s)</string>
    <string name="text_lh_format">零货(%1$s)</string>
    <string name="text_lh_amount">零货数量</string>
    <string name="text_location_add">货位新增</string>
    <string name="text_barcode_collect">条码收集</string>
    <string name="text_barcode_add">条码新增</string>
    <string name="text_allot_order_add">调拨单新增</string>
    <string name="text_allot_order_add_detail">调拨单新增详情</string>
    <string name="text_goods_barcode">商品条码</string>
    <string name="text_new_goods_barcode">新条码</string>
    <string name="text_goods_search">商品搜索</string>
    <string name="text_dosage_form">剂型</string>
    <string name="text_approval_number">批准文号</string>
    <string name="text_current_location">当前货位</string>
    <string name="text_current_inventory">当前库存</string>
    <string name="text_shop_delivery">门店收货</string>
    <string name="text_temporary">暂存</string>
    <string name="text_receiving_number">收货数量</string>
    <string name="text_delivery_number">配送数量</string>
    <string name="text_shop_delivery_edit">门店收货编辑</string>
    <string name="text_output_picking">出库拣选</string>
    <string name="text_unit_price">单价</string>
    <string name="text_money">金额</string>
    <string name="text_order_count">订单数量</string>
    <string name="text_picking_number">拣货数量</string>
    <string name="text_turnover_box">周转箱</string>
    <string name="text_turnover_box_add">添加周转箱</string>
    <string name="text_goods_allot">商品调拨</string>
    <string name="text_inventory_detail">库存详情</string>
    <string name="text_work_task">工作任务</string>
    <string name="text_document_detail">单据详情</string>
    <string name="text_username">用户名</string>
    <string name="text_detail_row">明细行数</string>
    <string name="text_total_money">总金额</string>
    <string name="text_clerk">业务员</string>
    <string name="text_desk_name">复核台</string>
    <string name="text_client_name">往来单位</string>
    <string name="text_remark">备注</string>
    <string name="text_header_remark">表头备注</string>
    <string name="text_all">全部</string>
    <string name="text_not_putaway">待上架</string>
    <string name="text_putaway_complete">已上架</string>

    <string name="text_navigation_drawer_open">Open navigation drawer</string>
    <string name="text_navigation_drawer_close">Close navigation drawer</string>
    <string name="text_setting">设置</string>
    <string name="text_other">其他</string>
    <string name="text_refresh_time">刷新时间</string>
    <string name="text_exit">退出</string>
    <string name="text_minute">分钟</string>
    <string name="text_refresh_time_format">%1$s分钟</string>
    <string name="text_history_goods">历史商品</string>
    <string name="text_original_order_type">原单类型</string>
    <string name="text_order_remark">订单备注</string>
</resources>
