<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/dp_16">

    <com.teeny.wms.widget.KeyValueTextView
        android:id="@+id/sku_check_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_32"
        app:key="@string/text_goods_name"
        app:separator="   "
        app:valueColor="@color/text_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.teeny.wms.widget.KeyValueTextView
            android:id="@+id/sku_check_allocation"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_32"
            android:layout_weight="1"
            app:key="@string/text_goods_allocation" />

        <com.teeny.wms.widget.KeyValueTextView
            android:id="@+id/sku_check_lot_number"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_32"
            android:layout_weight="1"
            app:key="@string/text_lot_number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.teeny.wms.widget.KeyValueTextView
            android:id="@+id/sku_check_manufacturer"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_32"
            android:layout_weight="1"
            app:key="@string/text_manufacturer" />

        <com.teeny.wms.widget.KeyValueTextView
            android:id="@+id/sku_check_amount"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_32"
            android:layout_weight="1"
            app:key="@string/text_amount"
            app:valueColor="@color/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.teeny.wms.widget.KeyValueTextView
            android:id="@+id/sku_check_validity_date"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_32"
            android:layout_weight="1"
            app:key="@string/text_validity" />

        <com.teeny.wms.widget.KeyValueTextView
            android:id="@+id/sku_check_specification"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_32"
            android:layout_weight="1"
            app:key="@string/text_specification" />

    </LinearLayout>

</LinearLayout>