<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/barcode_collect_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/dp_16">

    <com.teeny.wms.widget.KeyValueTextView
        android:id="@+id/barcode_collect_goods_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_32"
        app:key="@string/text_goods_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.teeny.wms.widget.KeyValueTextView
            android:id="@+id/barcode_collect_goods_barcode"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_32"
            android:layout_weight="1"
            app:key="@string/text_goods_barcode" />

        <com.teeny.wms.widget.KeyValueTextView
            android:id="@+id/barcode_collect_goods_specification"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_32"
            android:layout_weight="1"
            app:key="@string/text_specification" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.teeny.wms.widget.KeyValueTextView
            android:id="@+id/barcode_collect_goods_unit"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_32"
            android:layout_weight="1"
            app:key="@string/text_unit" />

        <com.teeny.wms.widget.KeyValueTextView
            android:id="@+id/barcode_collect_goods_dosage_form"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_32"
            android:layout_weight="1"
            app:key="@string/text_dosage_form" />

    </LinearLayout>

    <com.teeny.wms.widget.KeyValueTextView
        android:id="@+id/barcode_collect_goods_manufacturer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_32"
        app:key="@string/text_manufacturer" />

</LinearLayout>