<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_selectable_item_white"
    android:clickable="true"
    android:focusable="true"
    android:paddingEnd="@dimen/dp_16"
    android:paddingLeft="@dimen/dp_16"
    android:paddingRight="@dimen/dp_16"
    android:paddingStart="@dimen/dp_16">

    <com.teeny.wms.widget.KeyValueTextView
        android:id="@+id/shelve_article_no_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_32"
        app:key="@string/text_goods_allocation" />

    <TextView
        android:id="@+id/shelve_status_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_32"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/sp_14" />

    <com.teeny.wms.widget.KeyValueTextView
        android:id="@+id/shelve_goods_name_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_32"
        android:layout_below="@+id/shelve_article_no_view"
        android:paddingBottom="@dimen/dp_8"
        android:paddingTop="@dimen/dp_8"
        app:key="@string/text_goods_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shelve_goods_name_view"
        android:orientation="horizontal">

        <com.teeny.wms.widget.KeyValueTextView
            android:id="@+id/shelve_lot_number_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_32"
            android:layout_weight="1"
            android:paddingBottom="@dimen/dp_8"
            android:paddingTop="@dimen/dp_8"
            app:key="@string/text_lot_number" />

        <com.teeny.wms.widget.KeyValueTextView
            android:id="@+id/shelve_specification_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_32"
            android:layout_weight="1"
            android:paddingBottom="@dimen/dp_8"
            android:paddingTop="@dimen/dp_8"
            app:key="@string/text_specification" />
    </LinearLayout>

    <com.teeny.wms.widget.KeyValueTextView
        android:id="@+id/shelve_production_date_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_32"
        android:layout_below="@+id/shelve_goods_name_view"
        android:layout_marginTop="@dimen/dp_32"
        app:key="@string/text_validity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shelve_production_date_view"
        android:orientation="horizontal">

        <com.teeny.wms.widget.KeyValueTextView
            android:id="@+id/shelve_unit_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_32"
            android:layout_weight="1"
            android:paddingBottom="@dimen/dp_8"
            android:paddingTop="@dimen/dp_8"
            app:key="@string/text_unit" />

        <com.teeny.wms.widget.KeyValueTextView
            android:id="@+id/shelve_amount_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_32"
            android:layout_weight="1"
            android:paddingBottom="@dimen/dp_8"
            android:paddingTop="@dimen/dp_8"
            app:key="@string/text_amount" />

    </LinearLayout>

    <com.teeny.wms.widget.KeyValueTextView
        android:id="@+id/shelve_manufacturer_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_32"
        android:layout_below="@+id/shelve_production_date_view"
        android:layout_marginTop="@dimen/dp_32"
        app:key="@string/text_manufacturer" />

</RelativeLayout>